bytadaniel/frontend: add table support

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,17 @@ html, body {
   padding: 0;
 }
 
+.react-markdown-html table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.react-markdown-html th,
+.react-markdown-html td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
 /* Скрываем полосу прокрутки для WebKit-браузеров (Chrome, Safari, Edge) */
 .no-scrollbar::-webkit-scrollbar {
   display: none;
